# expense-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
src/expense_tracker/: __init__.py  __main__.py  cli.py  database.py  models.py  reports.py  visualization.py  web.py
src/expense_tracker/static/css/: style.css
src/expense_tracker/static/js/: app.js
src/expense_tracker/templates/: index.html
tests/: conftest.py  test_models.py  test_reports.py
